[package]
name = "container"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "container"
path = "src/main.rs"

[lib]
name = "libcontainer"
path = "src/lib.rs"
plugin = false
proc-macro = false
harness = true

[dependencies]
nix = "0.22.0"
log = "0.4"
env_logger = "0.9.0"
clap = "2.33.3"
anyhow = "1.0.42"
rtnetlink = "0.8.0"
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.16"
ipnetwork = "0.18.0"
